
6.58  2016-04-09
  - Added fork policy to Mojolicious::Guides::Contributing.
  - Improved Mojo::JSON to generate canonical JSON objects.
  - Fixed bug in Mojo::Loader where classes with exceptions could not be loaded
    twice. (kiwiroy, sri)

6.57  2016-03-23
  - Fixed a few validation bugs in Mojolicious::Validator::Validation.
    (Mikey, sri)
  - Fixed copyright notice.

6.56  2016-03-16
  - Added hidden option to list_files method in Mojo::Home. (batman, sri)
  - Added hidden option to files function in Mojo::Util. (batman, sri)
  - Fixed bug where Morbo would not ignore hidden files. (batman, sri)
  - Fixed bug where Morbo would ignore the --verbose option.
  - Fixed keep-alive bug in Mojo::UserAgent. (jberger)

6.55  2016-03-08
  - Deprecated Mojo::Server::Morbo::check in favor of
    Mojo::Server::Morbo::modified_files. (leejo, nugged)
  - Added modified_files method to Mojo::Server::Morbo. (leejo, nugged)
  - Improved renderer performance slightly.
  - Fixed a bug where Morbo would restart more than once if multiple files
    changed at the same time. (leejo, nugged)

6.54  2016-03-06
  - Deprecated Mojo::Template::build and Mojo::Template::compile.
  - Deprecated Mojo::Template::interpret in favor of Mojo::Template::process.
  - Added support for named variables to Mojo::Template.
  - Added vars attribute to Mojo::Template.
  - Added process method to Mojo::Template.
  - Improved Mojo::Template performance slightly.

6.53  2016-03-03
  - Removed multi_accept setting from Hypnotoad.
  - Removed -M options from daemon and prefork commands.
  - Deprecated Mojo::IOLoop::multi_accept.
  - Deprecated Mojo::IOLoop::Server::multi_accept.
  - Deprecated Mojo::Server::Daemon::multi_accept.
  - Added single_accept option to Mojo::IOLoop::Server::listen.
  - Added single_accept parameter to Mojo::Server::Daemon::listen.
  - Increased default max_requests from 25 to 100 in Mojo::Server::Daemon.